# ticketmaster

./: .env.example  .gitignore  README.md  docker-compose.yml  mkdocs.yml  ticketmaster_vyvojovy_plan_mvp_cli.md
backend/: Dockerfile  pyproject.toml
backend/migrations/: 001_initial.sql  002_production_indexes.sql  003_fulltext_search.sql  004_partner_client_hard_delete.sql  005_gitlab_delivery_alerts.sql  005_system_tickets.sql  006_gitlab_delivery_activity_markers.sql  006_ticket_custom_owner.sql  007_drop_ticket_custom_owner.sql  008_user_internal_roles.sql  009_audit_ticket_query_indexes.sql  010_gitlab_delivery_tracking.sql
backend/tests/: conftest.py  test_account_api.py  test_admin_user_password_api.py  test_api_hardening.py  test_audit_api.py  test_audit_display.py  test_audit_suppression.py  test_auth.py  test_auth_back_to_admin.py  test_auth_partner_sign_in.py  test_business_rules.py  test_cli.py  test_cli_ticket_delete.py  test_gitlab_delivery_tracking.py  test_gitlab_l3_handover.py  test_gitlab_status_sync.py  test_internal_roles.py  test_internal_to_partner_tickets.py  test_migrations_risky.py  test_policy_contract.py  test_redis_hardening.py  test_slug.py  test_smoke_cleanup.py  test_ticket_activity.py  test_ticket_delete_admin.py  test_ticket_id.py
backend/ticketmaster/: worker.py
backend/ticketmaster/api/: deps.py  error_handlers.py  main.py  routes.py
backend/ticketmaster/cli/: main.py
backend/ticketmaster/core/: config.py  database.py  redis_client.py  security.py  slug.py  telemetry.py  ticket_id.py
backend/ticketmaster/models/: __init__.py  (+2 more)
(+137 files in other folders)
